--- a/video.html
+++ b/video.html
@@ -37,7 +37,7 @@
 	<button id="orig" aria-label="Remove Styles and Revert to Original Video">Original</button>
 
 	<p>Video courtesy of Allison Sweet.</p>
-	<script src="video.js"></script>
+	<script src="js/video.js"></script>
 </main>
 </body>
 </html>
