--- a/video.html
+++ b/video.html
@@ -30,7 +30,7 @@
 	</figure> 
 	<button id="mute" aria-label="Mute/Unmute Video">Mute</button><br>
 
-	<label for="slider">Volume</label>: 0 <input type="range" id="slider" min="0" max="100" value="100" step="10"> 100%<br>
+	<label for="slider">Volume</label>: 0% <input type="range" id="slider" min="0" max="100" value="100" step="10"> 100%<br>
 	<div>Volume is: <span id="volume"> </span><br><br></div>
 
 	<button id="vintage" aria-label="Apply Vintage Style to Video">Old School</button>
